--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     margin: 0;
 }
 body{
+    color: #605d5d;
     font-family: sans-serif;
-    color: #605d5d
 }
 input:focus, button:focus, .area:focus, .f-family:focus{
     outline: none;
@@ -58,14 +58,20 @@ input:focus, button:focus, .area:focus, .f-family:focus{
 .btn-style:hover{
     background: #eb6af5
 }
-
-
+.out-block{
+    font-family: serif;
+    font-size: 16px;
+}
+.settings-block{
+    display: none;
+    font-family:sans-serif;
+}
 
 /*edit*/
 .edit{
     width: 100%;
     height: 100%;
-/*    display: none*/
+    display: none
 }
 .area{
     padding: 10px;
@@ -95,7 +101,7 @@ input:focus, button:focus, .area:focus, .f-family:focus{
     width: 100%;
     height: 100%;
     font-size: 16px;
-    
+    position: relative;
     display: none
 }
 .form-headers{
@@ -108,7 +114,7 @@ input:focus, button:focus, .area:focus, .f-family:focus{
     margin-bottom: 15px;
 }
 
-.style form label{
+.style-block label{
     margin-right: 20px;
     cursor: pointer
 }
@@ -125,5 +131,41 @@ input:focus, button:focus, .area:focus, .f-family:focus{
 .btn-colors:hover{
     background: #eb6af5
 }
+.color-box{
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+/*    border: 1px solid red;*/
+    right: 20px;
+    top: 50%;
+    margin-top: -75px;
+    cursor: pointer;
+}
+.colors-item{
+    width: 50px;
+    height: 50px;
+}
 
-/**/
+/*second-window*/
+
+.second-window{
+    display: none
+}
+.second-window h1{
+    font-size: 22px;
+}
+.second-window form{
+    margin-top: 10px;
+}
+.second-window form label{
+    display: block;
+    margin-top: 15px;
+}
+
+
+.table{
+    height: 600px;
+}
