--- a/style.css
+++ b/style.css
@@ -7,13 +7,16 @@ body{
     color: #605d5d;
     font-family: sans-serif;
 }
-input:focus, button:focus, .area:focus, .f-family:focus{
+input:focus, button:focus, .area:focus, .f-family:focus, select:focus{
     outline: none;
 }
-.f-family, button {
+select, button {
     cursor: pointer
 }
-
+/*display none*/
+.table, .list, .edit, .style{
+    display: none;
+}
 /**********/
 .container{
     width: 70%;
@@ -22,13 +25,12 @@ input:focus, button:focus, .area:focus, .f-family:focus{
 
 .block{
     background: #fff;
-    height: 300px;
+    min-height: 200px;
     margin: 15px 0;
     width: 100%;
     border-radius: 5px;
     box-shadow: 7px 9px 32px -30px rgba(64, 103, 103, 0.64);
     padding: 20px;
-/*    border: 2px solid red*/
 }
 .btn{
     padding: 5px 15px;
@@ -71,14 +73,13 @@ input:focus, button:focus, .area:focus, .f-family:focus{
 .edit{
     width: 100%;
     height: 100%;
-    display: none
 }
 .area{
     padding: 10px;
     width: 100%;
+    height: 200px;
     resize: none;
-    height: 80%;
-    border: 2px dotted lightblue
+    border: 2px dotted lightblue;
 }
 .settings-btn{
     margin-top: 10px
@@ -102,7 +103,6 @@ input:focus, button:focus, .area:focus, .f-family:focus{
     height: 100%;
     font-size: 16px;
     position: relative;
-    display: none
 }
 .form-headers{
     font-size: 18px;
@@ -118,7 +118,7 @@ input:focus, button:focus, .area:focus, .f-family:focus{
     margin-right: 20px;
     cursor: pointer
 }
-.f-family{
+.select{
     padding: 5px;
     border: none;
     border-left: 2px solid #f6d8f8
@@ -138,7 +138,6 @@ input:focus, button:focus, .area:focus, .f-family:focus{
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-/*    border: 1px solid red;*/
     right: 20px;
     top: 50%;
     margin-top: -75px;
@@ -150,7 +149,6 @@ input:focus, button:focus, .area:focus, .f-family:focus{
 }
 
 /*second-window*/
-
 .second-window{
     display: none
 }
@@ -164,8 +162,40 @@ input:focus, button:focus, .area:focus, .f-family:focus{
     display: block;
     margin-top: 15px;
 }
-
-
-.table{
-    height: 600px;
+.second-window label input{
+    width: 40px;
+    border:none;
+    border-bottom: 1px solid #ff8282;
+    padding: 2px 5px;
+    margin-left: 15px;
+    background: none
+}
+.second-window label{
+    font-size: 14px;
+}
+.second-window .select{
+    border: none;
+    border-bottom: 1px solid #ff8282
+    
+}
+.border{
+    display: flex;
+    justify-content: space-between;
+    
+}
+.btn-create{
+    margin-top: 20px;
+    background: #ffd5d5
+}
+.btn-create:hover{
+    background: #ff8282
+}
+.relative{
+    position: relative
+}
+.notification{
+    color: #571212;
+    font-size: 10px;
+    position: absolute;
+    top: 5px;
 }
